feat(dao): add a private invitation waitlist
